- method="GCV.Cp" as default in gam. Default will 
  change to "REML". (1.8-24, June 2018) 

Currently deprecated and liable to be removed:
- gam performance iteration (1.8-19, Sept 2017)
- argument 'pers' in plot.gam (1.8-23, Nov 2017)

Issues: 

* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

1.8-25

* Fix of very obscure bug in which very poor model of small dataset could
  end up with fewer `good' data than coefs, breaking an assumption of C code 
  and segfaulting. 

* fix of null deviance computation bug introduced with extended families in 
  bam - null deviance was wrong for non-default methods.

* liu2 modified to deal with random effects estimated to be exactly 0, so 
  that summary.gam does not fail in this case.

1.8-24

* Extended Fellner Schall optimizer now avaialable for all families with 'gam'
  using gam(...,optimizer="efs").

* Change to default behaviour of plot.gam when 'seWithMean=TRUE', and of
  predict.gam when 'type="iterms"'. The extra uncertainty added to CIs or
  standard errors now reflects the uncertainty in the mean in all other model
  terms, not just the uncertanity in the mean of the fixed effects as before.
  See ?plot.gam and ?predict.gam (including for how to get the old behaviour).  

* 're' smooths can now accept matrix arguments: see ?linear.functional.terms. 

* cox.ph now allows an offset to be provided.

* Fix in smoothCon for bug in case in which only a single coefficient is 
  involved in a sum-to-zero constraint. Could cause failure in e.g. t2 with
  cc marginal. 

* Model terms s, te etc are now always evaluated in mgcv workspace explicitly
  to avoid masking problems in obscure circumstances. 

* 'mrf' smooth documentation modified to make it clearer how to specify 'nb',
  and code modified so that it is now possible to specify the neighbour 
  structure using names rather than indices.

* 'bfgs' fix to handle extended families.
