@@ -20,8 +20,10 @@ tdpois <- function(dat,event="z",et="futime",t="day",status="status1",
   require(utils) ## for progress bar
   te <- sort(unique(dat[[et]][dat[[status]]==1])) ## event times
   sid <- unique(dat[[id]])
-  prg <- txtProgressBar(min = 0, max = length(sid), initial = 0,
-         char = "=",width = NA, title="Progress", style = 3)
+  inter <- interactive()
+  if (inter) prg <-
+       txtProgressBar(min = 0, max = length(sid), initial = 0,
+       char = "=",width = NA, title="Progress", style = 3)
   ## create dataframe for poisson model data
   dat[[event]] <- 0; start <- 1
   dap <- dat[rep(1:length(sid),length(te)),]
@@ -35,7 +37,7 @@ tdpois <- function(dat,event="z",et="futime",t="day",status="status1",
     um[[et]] <- tr ## reset time to relevant event times
     dap[start:(start-1+nrow(um)),] <- um ## copy to dap
     start <- start + nrow(um)
-    setTxtProgressBar(prg, i)
+    if (inter) setTxtProgressBar(prg, i)
   }
   close(prg)
   dap[1:(start-1),]
